// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands artifactDependentExamples should return examples for commands that depend on artifacts 1`] = `"For example: if you include "read" and "update_from_artifact", the "update_from_artifact" command will use the artifact that will be created from the "read" command or "generate" and "update_from_artifact", the "update_from_artifact" command will use the artifact that will be created from the "generate" command."`;

exports[`commands artifactDependentExamples should return only one example if there are only one command that creates artifacts 1`] = `"For example: if you include "read" and "update_from_artifact", the "update_from_artifact" command will use the artifact that will be created from the "read" command."`;

exports[`commands formatCommandsForPrompt should handle command names that include a query fragment 1`] = `
"- name: vault?tools=list,rename
  description: |-
    An agent performs vault-related operations. You MUST add a query to activate one or more tools that needs to perform the operation, e.g. 'vault?tools=list,rename'.
    Available tools: list, rename, create, delete, copy, update_frontmatter, and move.
  use_when: Vault operations (list files, create notes, etc.)
"
`;

exports[`commands formatCommandsForPrompt should merge multiple commands referencing the same agent by tools 1`] = `
"- name: vault?tools=list,rename,copy
  description: |-
    An agent performs vault-related operations. You MUST add a query to activate one or more tools that needs to perform the operation, e.g. 'vault?tools=list,rename'.
    Available tools: list, rename, create, delete, copy, update_frontmatter, and move.
  use_when: Vault operations (list files, create notes, etc.)
"
`;

exports[`commands formatCommandsForPrompt should return formatted commands for prompt 1`] = `
"- name: search
  description: Find files using the search engine to search files locally and store the result as an artifact
  use_when: Search for files (and doesn't mention existing search results)
- name: close
  description: Close the conversation or exit
  use_when: Close the conversation
- name: confirm
  description: Confirm or reject the current command to proceed
  aliases:
    - 'yes'
    - 'no'
- name: image
  description: Generate an image
  use_when: Generate an image
- name: audio
  description: Generate audio from text
  aliases:
    - speak
  use_when: Generate audio
- name: vault
  description: |-
    An agent performs vault-related operations. You MUST add a query to activate one or more tools that needs to perform the operation, e.g. 'vault?tools=list,rename'.
    Available tools: list, rename, create, delete, copy, update_frontmatter, and move.
  use_when: Vault operations (list files, create notes, etc.)
- name: vault_move
  description: Move notes from the artifact to a destination
  aliases:
    - move
  use_when: Move notes from the artifact
- name: vault_copy
  description: Copy notes from the artifact to a destination
  aliases:
    - copy
  use_when: Copy notes from the artifact
- name: update_from_artifact
  description: Update note(s) from the artifact
  aliases:
    - update
  use_when: Update one or more notes from the artifact
- name: vault_delete
  description: Delete note(s) from the artifact
  aliases:
    - delete
  use_when: Delete notes from the artifact
- name: build_search_index
  description: Build or rebuild the search index for all markdown files in the vault
  use_when: Build or rebuild the search index for all markdown files in the vault
- name: read
  description: |-
    Read text contents, images from the current note in specific position: "above", "below". OR from the other notes. Use this when you don't know the content and need to retrieve it before proceeding
    - Can read any content type, including code blocks, tables, lists, paragraphs, and more.
    - Can multiple notes at once.
    - Can read when the note's name or position (above or below) is provided, no location needed.
  use_when: Read or Find content based on a specific pattern in their current note
- name: generate
  description: |-
    Generate content with the LLM help.
    If you see the source content is already included in the user's query, you can use "generate" without the need of reading additional content. Example: "Help me update this list to the numbered list:
    - Item 1
    - Item 2".
    Otherwise, you need to include the "read" command.
  use_when: Ask, update, or generate content with your help
"
`;

exports[`commands formatCommandsForPrompt should return formatted commands for prompt with given command names 1`] = `
"- name: read
  description: |-
    Read text contents, images from the current note in specific position: "above", "below". OR from the other notes. Use this when you don't know the content and need to retrieve it before proceeding
    - Can read any content type, including code blocks, tables, lists, paragraphs, and more.
    - Can multiple notes at once.
    - Can read when the note's name or position (above or below) is provided, no location needed.
  use_when: Read or Find content based on a specific pattern in their current note
- name: generate
  description: |-
    Generate content with the LLM help.
    If you see the source content is already included in the user's query, you can use "generate" without the need of reading additional content. Example: "Help me update this list to the numbered list:
    - Item 1
    - Item 2".
    Otherwise, you need to include the "read" command.
  use_when: Ask, update, or generate content with your help
- name: update_from_artifact
  description: Update note(s) from the artifact
  aliases:
    - update
  use_when: Update one or more notes from the artifact
"
`;

exports[`commands formatCurrentArtifacts should return formatted current artifacts for prompt 1`] = `
"Current artifacts in the conversation can be used by artifact-dependent commands:
- search_results
- read_content"
`;

exports[`commands formatQueryTemplatesForPrompt should return empty YAML structure when no commands have templates 1`] = `
"[]
"
`;

exports[`commands formatQueryTemplatesForPrompt should return formatted query templates for prompt 1`] = `
"- command: search
  template: |-
    Extract a specific query for a search command:
    1. Extract the query for the search command follows this format: [file name <file_name>][, tag <tag>][, folder <folder>][, keywords <keywords>]
      - <file_name>: If searching for a specific file name.
      - <tag>: If searching for a specific tag, include it with the # symbol.
      - <folder>: If searching in a specific folder.
      - <keywords>: Words or phrases to search for within note content.
      NOTE: Square brackets [] indicate optional part of the query. At least one part must be present.

    2. Search Guidelines:
      - Multiple parameters can be combined when needed.
      - Preserve the original wording and context if provided: start with, contain, or exact, for example: "file name start with...", "keywords contain...", "folder exact..."
- command: vault_move
  template: |-
    Extract specific details for a vault_move command follows this format: <query>; destination: <destination>
    - <query>: The query for the move command.
    - <destination>: The destination folder.
- command: vault_copy
  template: |-
    Extract specific details for a vault_copy command follows this format: <query>; destination: <destination>
    - <query>: The query for the copy command.
    - <destination>: The destination folder.
- command: update_from_artifact
  template: Extract specific details for what to be updated.
- command: vault_delete
  template: |-
    Extract specific details for a vault_delete command:
    - The query always be: "Delete all notes in the search result."
- command: read
  template: |-
    Extract a specific query for a read command:
    1. Extract the query for the read command follows this format: <query_in_natural_language>, read type: <read_type>[, note name: <note_name>] [; <other_notes_to_read>]
      - <query_in_natural_language>: Tailored query for each read command.
      - <read_type>: above, below, or entire.
      - <note_name>: The note name to read. 
        - If the <read_type> is "entire", include the note name.
        - If the <read_type> is "above" or "below", it means current note, leave the note name blank.
      - <other_notes_to_read>: The other notes to read if needed. Follow the same structure as the previous.
      NOTE: Square brackets [] indicate optional part of the query.

    2. Read multiple notes if needed.
      - If the query require read content in one or more notes, include all of them.
        Example: "Read the context above, read type: above; Read the note named 'Note 2', read type: entire, note name: 'Note 2'"

    3. Maintain Natural Language:
      - Keep the query in natural language form.
- command: generate
  template: |-
    Extract the query for the generate command follows this format: <query_in_natural_language>, [note name: <note_name>]
    - <query_in_natural_language>: Tailored query for the generate command.
    - <note_name>: The existing note name, include only if mentioned in the context.
    NOTE: Square brackets [] indicate optional part of the query.
"
`;

exports[`commands formatQueryTemplatesForPrompt should return formatted query templates for prompt with given command names 1`] = `
"- command: read
  template: |-
    Extract a specific query for a read command:
    1. Extract the query for the read command follows this format: <query_in_natural_language>, read type: <read_type>[, note name: <note_name>] [; <other_notes_to_read>]
      - <query_in_natural_language>: Tailored query for each read command.
      - <read_type>: above, below, or entire.
      - <note_name>: The note name to read. 
        - If the <read_type> is "entire", include the note name.
        - If the <read_type> is "above" or "below", it means current note, leave the note name blank.
      - <other_notes_to_read>: The other notes to read if needed. Follow the same structure as the previous.
      NOTE: Square brackets [] indicate optional part of the query.

    2. Read multiple notes if needed.
      - If the query require read content in one or more notes, include all of them.
        Example: "Read the context above, read type: above; Read the note named 'Note 2', read type: entire, note name: 'Note 2'"

    3. Maintain Natural Language:
      - Keep the query in natural language form.
- command: generate
  template: |-
    Extract the query for the generate command follows this format: <query_in_natural_language>, [note name: <note_name>]
    - <query_in_natural_language>: Tailored query for the generate command.
    - <note_name>: The existing note name, include only if mentioned in the context.
    NOTE: Square brackets [] indicate optional part of the query.
- command: update_from_artifact
  template: Extract specific details for what to be updated.
"
`;
